--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
 .App {
-  text-align: center;
+  background-color: white;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border: 0.1px solid transparent;
+}
+
+.content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 35%;
+  height: 100%;
+  background-color: rgb(209, 216, 205);
+}
+
+.container {
+  position: inherit;
+  background-color: rgb(209, 216, 205);
+  margin-left: 25%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  height: 500px;
+  width: 380px;
+  border: solid rgb(100, 98, 98);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.container::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
+  background-color: white;
+}
+
+.wrapper {
+  margin-top: 16%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
+  z-index: 1;
+}
+.fb {
+  border: 0.5px solid black;
+}
+.tw {
+  border: 0.5px solid black;
+}
+.li {
+  border: 0.5px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.fb:hover {
+  cursor: pointer;
+  background-color: #3b5998;
+}
+.tw:hover {
+  cursor: pointer;
+  background-color: #00acee;
+}
+.li:hover {
+  cursor: pointer;
+  background-color: #3b5998;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container h1 {
+  position: relative;
+}
+
+.container h1::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20%;
+  height: 4px;
+  background-color: rgb(23, 57, 248);
+}
+
+.container-2 {
+  /* border: solid rgb(5, 5, 5); */
+  margin-top: 12%;
+  margin-bottom: 10%;
+  width: 500px;
+}
+
+.container-2 .resume {
+  border: 0.5px solid blue;
+}
+.container-2 .project {
+  border: 0.5px solid black;
 }
