--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,36 @@
 .container-2 .project {
   border: 0.5px solid black;
 }
+
+@media (max-width: 640px) {
+  .content {
+    display: block;
+  }
+  .container {
+    display: block;
+    margin-left: 15%;
+    width: 280px;
+  }
+  .container-2 {
+    position: relative;
+    margin-left: 10%;
+  }
+  .wrapper {
+    position: relative;
+    margin-top: 40%;
+  }
+  .container-2 h1 {
+    font-size: 32px;
+    line-height: 2.25rem;
+  }
+  .container-2 h2 {
+    margin-top: 10px;
+    font-size: 22px;
+  }
+  .container-2 p {
+    margin-top: 10px;
+    font-size: 16px;
+    text-align: justify;
+    width: 100%;
+  }
+}
