--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
 .container {
   position: inherit;
   background-color: rgb(209, 216, 205);
-  margin-left: 25%;
+  margin-left: 20%;
   margin-top: 10%;
   margin-bottom: 10%;
   height: 500px;
@@ -183,7 +183,8 @@
   }
   .container {
     display: block;
-    margin-left: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
     width: 300px;
   }
   .container-2 {
@@ -192,7 +193,7 @@
   }
   .wrapper {
     position: relative;
-    margin-top: 40%;
+    margin-top: 38%;
   }
   .container-2 h1 {
     font-size: 32px;
@@ -206,10 +207,10 @@
     margin-top: 10px;
     font-size: 16px;
     text-align: justify;
-    width: 70%;
+    width: 60%;
   }
   .footer {
-    font-size: 12px;
-    padding: 8px 24px;
+    font-size: 15px;
+    padding: 10px 24px;
   }
 }
