--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
     opacity: 1;
   }
 }
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 .fade-out {
   opacity: 0;
