--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,15 @@
 }
 
 .App {
-  background-color: white;
-  height: 100vh;
+  background: radial-gradient(
+    328px at 2.9% 15%,
+    rgb(191, 224, 251) 0%,
+    rgb(232, 233, 251) 25.8%,
+    rgb(252, 239, 250) 50.8%,
+    rgb(234, 251, 251) 77.6%,
+    rgb(240, 251, 244) 100.7%
+  );
+  height: auto;
   animation: fade-in 0.8s ease-in;
 }
 @keyframes fade-in {
@@ -61,7 +68,7 @@
   color: rgb(176, 231, 144);
 }
 
-.list a:hover {
+.navbar-menu a:hover {
   background: rgb(51, 147, 131);
 }
 
@@ -83,14 +90,21 @@
   left: 0;
   width: 100%;
   height: 10%;
-  background-color: white;
+  background: radial-gradient(
+    328px at 2.9% 15%,
+    rgb(191, 224, 251) 0%,
+    rgb(232, 233, 251) 25.8%,
+    rgb(252, 239, 250) 50.8%,
+    rgb(234, 251, 251) 77.6%,
+    rgb(240, 251, 244) 100.7%
+  );
 }
 .container-2 {
   margin-right: 10%;
 }
 
 .wrapper {
-  margin-top: 16%;
+  margin-top: 4rem;
   display: flex;
   justify-content: center;
   position: relative;
@@ -169,13 +183,36 @@
   border: 0.5px solid black;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 767px) {
   .App {
-    background-color: white;
+    background: white;
     width: auto;
     height: auto;
     overflow-x: hidden;
   }
+  /* /* .hamburger {
+    position: relative;
+    display: block;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+
+  .hamburger-line {
+    display: block;
+    width: 24px;
+    height: 2px;
+    background-color: rgb(216, 71, 71);
+  } */
+  /* 
+  .nav-menu {
+    display: none;
+  }
+
+  .nav-menu.active {
+    display: block;
+  }  */
   .content::before {
     background: white;
   }
@@ -184,6 +221,7 @@
   }
   .course {
     font-size: large;
+    padding-right: 28px;
   }
   .nav-head {
     margin-left: 5px;
@@ -196,15 +234,16 @@
     display: block;
     margin-left: 10%;
     margin-right: 10%;
-    width: 300px;
+    width: auto;
   }
   .container-2 {
     position: relative;
     margin-left: 10%;
+    width: auto;
   }
   .wrapper {
     position: relative;
-    margin-top: 38%;
+    margin-top: 7rem;
   }
   .container-2 h1 {
     font-size: 32px;
@@ -218,11 +257,105 @@
     margin-top: 10px;
     font-size: 16px;
     text-align: justify;
-    width: 60%;
+    width: auto;
   }
   .footer {
     font-size: 15px;
     padding: 10px 24px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1160px) {
+  .App {
+    background-color: white;
+    width: auto;
+    height: auto;
+    overflow-x: hidden;
+  }
+  .container {
+    margin-left: 1rem;
+    width: 400px;
+  }
+  .navbar-menu a {
+    width: 120px;
+    font-size: small;
+    margin-right: -5%;
+  }
+  .name {
+    font-size: large;
+    width: 200px;
+  }
+  .name span {
+    font-size: 18px;
+  }
+  .about {
+    padding-left: 20px;
+    width: 120px;
+  }
+  .wrapper {
+    position: relative;
+    margin-top: 4rem;
+  }
+}
+
+/* NAVBAR RESPONSIVE CSS */
+@media (max-width: 767px) {
+  .navbar-toggle {
+    display: block;
+    top: 0;
+    right: 0;
+    margin: 1rem;
+    border: none;
+    outline: none;
+    z-index: 9999;
+    color: rgb(254, 254, 254);
+  }
+
+  .navbar-toggle:focus {
+    outline: none;
+  }
+
+  .navbar-menu {
+    display: none;
+    position: absolute;
+    top: 11%;
+    right: 0;
+    width: 100%;
+    background: radial-gradient(
+      circle at 5.6% 54.5%,
+      rgb(47, 71, 79) 0%,
+      rgb(159, 188, 198) 83.6%
+    );
+    opacity: 0.8;
+    z-index: 999;
+  }
+
+  .menu-icon {
+    color: #fff;
+    font-size: 32px;
+  }
+
+  .navbar-menu.open {
+    display: block;
+  }
+
+  .navbar-menu a {
+    display: block;
+    padding: 20px;
+    margin-left: 5px;
+    margin-right: 30px;
+    margin-bottom: 10px;
+    color: white;
+    border-bottom: 1px solid rgb(126, 125, 125);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    text-decoration: none;
+    transition: 1s ease;
+  }
+  .navbar-menu a:hover {
+    background-color: transparent;
+  }
+  .menu-icon {
+    transition: transform 1s ease;
   }
 }
 
@@ -248,10 +381,206 @@
 }
 
 .boxes {
-  margin: 0 auto;
+  transition: transform 0.5s;
+  margin: 1% auto;
   justify-content: center;
   width: 850px;
-  height: 500px;
+  height: auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: white;
+  border-radius: 0.5rem;
+}
+.boxes:hover {
+  transform: scale(1.05);
+}
+
+.date {
+  color: rgb(21, 75, 21);
+}
+.company {
+  color: rgb(54, 54, 54);
+}
+.location {
+  color: rgb(54, 54, 54);
+}
+
+.paragraph {
+  width: 400px;
+}
+
+.description span {
+  font-size: 20px;
+  color: green;
+}
+
+.learnings {
+  background: radial-gradient(
+    328px at 2.9% 15%,
+    rgb(191, 224, 251) 0%,
+    rgb(232, 233, 251) 25.8%,
+    rgb(252, 239, 250) 50.8%,
+    rgb(234, 251, 251) 77.6%,
+    rgb(240, 251, 244) 100.7%
+  );
+  border: 1px solid black;
+  border-radius: 10px 4px;
+  box-shadow: 5px 10px #888888;
+}
+
+.learnings span {
+  font-size: 20px;
+  color: green;
+}
+.skills {
+  margin: 5% auto;
+  justify-content: center;
+  width: 1000px;
+  height: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: rgb(255, 255, 255);
+  border-radius: 0.5rem;
+}
+
+.skills-margin {
+  width: 820px;
+}
+.skills-cont {
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 0.5rem;
+  background: radial-gradient(
+    328px at 2.9% 15%,
+    rgb(191, 224, 251) 0%,
+    rgb(232, 233, 251) 25.8%,
+    rgb(252, 239, 250) 50.8%,
+    rgb(234, 251, 251) 77.6%,
+    rgb(240, 251, 244) 100.7%
+  );
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.skills-cont:hover {
+  cursor: pointer;
+  transform: scaleX(1.05);
+}
+@media (max-width: 767px) {
+  .Margin {
+    margin: 1rem 1rem;
+  }
+  .title {
+    width: 300px;
+    margin-top: 10%;
+  }
+  .title h1 {
+    font-size: 30px;
+  }
+  .title img {
+    height: 3rem;
+  }
+  .experience {
+    text-align: left;
+    display: block;
+    margin-left: -2rem;
+    margin-top: 10%;
+  }
+  .download {
+    margin-top: 1%;
+    margin-left: 4%;
+  }
+  .boxes {
+    display: block;
+    width: auto;
+    margin-top: 5%;
+  }
+  .boxes-margin {
+    width: auto;
+    padding-top: 3%;
+    padding-bottom: 1rem;
+    padding-left: 0rem;
+    margin-inline-start: 1rem;
+  }
+  .paragraph {
+    margin-top: 0rem;
+    width: auto;
+  }
+  .para-des {
+    padding-top: 0;
+  }
+  .description {
+    margin-left: 5%;
+    width: auto;
+  }
+  .learnings {
+    width: auto;
+  }
+  .skills {
+    border-radius: 1rem;
+    padding: 5px 5px;
+    display: block;
+    width: auto;
+  }
+  .skills-margin {
+    margin-left: 5%;
+    width: auto;
+  }
+  .skills-margin h1 {
+    padding-bottom: 5%;
+  }
+  .sliding-container {
+    width: auto;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+  }
+
+  .slider {
+    width: auto;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .skills-cont {
+    height: 200px;
+    background-color: rgb(139, 239, 139);
+    flex: 0 0 auto;
+    margin: 4px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1160px) {
+  .experience {
+    width: auto;
+  }
+  .boxes {
+    width: auto;
+  }
+  .skills {
+    width: auto;
+  }
+
+  .sliding-container {
+    width: auto;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+  }
+
+  .slider {
+    width: auto;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .skills-cont {
+    height: 200px;
+    width: auto;
+    flex: 0 0 auto;
+    margin: 4px;
+  }
+}
+/* PAGE ANIMATION */
+.fade-in {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-in.active {
+  opacity: 1;
 }
